# inai

./: .gitignore  LICENSE  PHASE_1_REPORT.md  README.md  build.sh  inai.example.toml  run.sh  test.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  orchestrator.py
backend/app/brain/: __init__.py  ingest.py  retrieve.py  schema.py  store.py
backend/app/llm/: __init__.py  catalog.py  client.py
backend/app/tools/: __init__.py  files.py
backend/tests/: conftest.py  test_api.py  test_brain.py  test_llm_router.py  test_memory_provenance_files.py  test_orchestrator.py  test_pdf_sessions_access.py  test_settings_profile.py  test_views.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  shot5.tmp.mjs  tailwind.config.js  vite.config.ts
frontend/e2e/: brain.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ui.tsx
frontend/src/components/Chat/: Chat.test.tsx  Chat.tsx
frontend/src/components/Memory/: GraphView.test.tsx  GraphView.tsx  MemoryView.tsx
frontend/src/components/Onboarding/: Onboarding.tsx
frontend/src/components/Orb/: Orb.test.tsx  Orb.tsx  Orb3D.tsx  OrbFallback.tsx
frontend/src/components/Settings/: SettingsModal.tsx
frontend/src/components/Views/: ViewRenderer.test.tsx  ViewRenderer.tsx
frontend/src/hooks/: useAssistant.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/test/: setup.ts
