[project]
name = "inai-backend"
version = "0.1.0"
description = "Inai (இணை) — local-first voice brain assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "pydantic>=2.6",
    "pypdf>=5.0",
]

[project.optional-dependencies]
# Real LLM providers. Kept optional so tests run without a heavy install.
llm = ["litellm>=1.40"]
# Embedded property-graph backend. JSON store is the always-available fallback.
graph = ["kuzu>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
